--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#f2f2f2"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
 
@@ -13,38 +13,42 @@
         android:id="@+id/etFirstName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:padding="20dp"
-        android:drawableStart="@drawable/ic_profile"
-        android:drawablePadding="8dp"
-        android:textSize="20sp"
         android:layout_margin="10dp"
         android:background="@drawable/sh_textview"
+        android:drawableStart="@drawable/ic_profile"
+        android:drawablePadding="8dp"
+        android:hint="first name"
+        android:padding="20dp"
+        android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:hint="first name"/>
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/etLastName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:padding="20dp"
-        android:drawableStart="@drawable/ic_profile"
-        android:drawablePadding="8dp"
-        android:textSize="20sp"
         android:layout_margin="10dp"
         android:background="@drawable/sh_textview"
+        android:drawableStart="@drawable/ic_profile"
+        android:drawablePadding="8dp"
+        android:hint="last name"
+        android:padding="20dp"
+        android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:hint="last name"/>
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="go to second activity"
-        android:layout_gravity="center"/>
+        android:text="go to second activity" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvStudent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
