--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#f2f2f2"
+    android:clickable="true"
+    android:focusable="true"
+    android:id="@+id/linContainer"
+    android:foreground="?attr/selectableItemBackground"
     android:layout_marginBottom="5dp"
     android:orientation="vertical">
 
